[gd_scene load_steps=4 format=2]

[ext_resource path="res://2d-dados/hub.gd" type="Script" id=1]
[ext_resource path="res://2d-dados/fondo.jpg" type="Texture" id=2]
[ext_resource path="res://2d-dados/icon.png" type="Texture" id=3]

[node name="main" type="Node2D"]

[node name="Tab" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="VideoPlayer" type="Sprite" parent="Tab"]
position = Vector2( 500, 250 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )
centered = false

[node name="hub" type="Node2D" parent="."]
position = Vector2( 50, 50 )
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="hub"]
visible = false
modulate = Color( 0.333333, 0.027451, 0.027451, 1 )
margin_left = -26.0
margin_top = -17.0
margin_right = 304.0
margin_bottom = 85.0

[node name="jugador" type="Label" parent="hub"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.988235, 0.909804, 0.0117647, 1 )
text = "Jugador
"

[node name="contrincante" type="Label" parent="hub"]
margin_top = 29.0
margin_right = 80.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0.984314, 0.882353, 0.0117647, 1 )
text = "contrincante"

[node name="resultado" type="Label" parent="hub"]
margin_top = 67.0
margin_right = 80.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0.988235, 0.839216, 0.0117647, 1 )
text = "contrincante"

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -31.0
margin_top = -12.0
margin_right = 866.0
margin_bottom = 612.0

[node name="Timer" type="Timer" parent="TextureButton"]

[connection signal="pressed" from="TextureButton" to="hub" method="_on_TextureButton_pressed"]
[connection signal="timeout" from="TextureButton/Timer" to="hub" method="_on_Timer_timeout"]
